--- a/_notebooks/Foundation/B-tools_and_equipment/2023-08-21-devops_tools-home.ipynb
+++ b/_notebooks/Foundation/B-tools_and_equipment/2023-08-21-devops_tools-home.ipynb
@@ -82,6 +82,21 @@
     "- **Community and Support**: Be a daily communicator at your table and in Slack. Start the communication habit now. Information sharing needs to be constant and timely.\n",
     "- **Team and Project Communication**: Start researching tenets of Agile/Scrum methodologies. Use the GitHub Issue and GitHub Project tools. All students will qualify for the right to be on a project team based on fundamental tool knowledge, communication habits, and supporting assessments and analytics."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "(About Page): \n",
+    "\n",
+    "Hi! I'm Ryan Nguyen. I'm a Junior here at Del Norte. My favorite candy is Skittles, evidenced by my topic of choice for this mini-project. I love programming, anything STEM-related, and reading. I am an introvert, and thus I thrive off individual time and spending time alone. This isn't to say that I don't like social interaction! I love talking to people who can keep the coversation going and match my energy or interests. I'm excited to be here in AP CSP, and I hope to learn a lot in this class. "
+   ]
   }
  ],
  "metadata": {
