--- a/_notebooks/Foundation/B-tools_and_equipment/2023-08-23-devops-githhub_pages-play.ipynb
+++ b/_notebooks/Foundation/B-tools_and_equipment/2023-08-23-devops-githhub_pages-play.ipynb
@@ -552,6 +552,29 @@
     "</script>\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "<html>\n",
+    "<div id=\"paragraph\">\n",
+    "    <p>This is a paragraph.</p>\n",
+    "</div>\n",
+    "<body>\n",
+    "    <script> \n",
+    "        document.getElementById('paragraph');\n",
+    "            paragraph.style.marginBottom('20px');\n",
+    "    </script>\n",
+    "</body>\n",
+    "</html>"
+   ]
   }
  ],
  "metadata": {
