--- a/2024-09-15-python.ipynb
+++ b/2024-09-15-python.ipynb
@@ -1,29 +1,51 @@
 {
-    "cells": [
-     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-       "from emoji import emojize \n",
-       "print(emojize(\":thumbs_up: Python is awesome! :grinning_face:\"))\n",
-       "print(\"This is my introduction to Jupyter Notebooks! This is my emoji notebook. :)\")"
-      ]
-     }
-    ],
-    "metadata": {
-     "kernelspec": {
-      "display_name": "venv",
-      "language": "python",
-      "name": "python3"
-     },
-     "language_info": {
-      "name": "python",
-      "version": "3.10.12"
-     }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 2
-   }
-   
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "toc: true\n",
+    "comments: False\n",
+    "layout: post\n",
+    "title: Emojis and Python\n",
+    "permalink: /emojis/\n",
+    "type: ccc\n",
+    "courses: {capsule: {week: 0}}\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from emoji import emojize \n",
+    "print(emojize(\":thumbs_up: Python is awesome! :grinning_face:\"))\n",
+    "print(\"This is my introduction to Jupyter Notebooks! This is my emoji notebook. :)\")\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
