final update and commit

--- a/_notebooks/Foundation/B-tools_and_equipment/2023-08-21-devops_tools-home.ipynb
+++ b/_notebooks/Foundation/B-tools_and_equipment/2023-08-21-devops_tools-home.ipynb
@@ -35,6 +35,18 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "from emoji import emojize \n",
+    "print(emojize(\":thumbs_up: Python is awesome! :grinning_face:\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -85,13 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 3) (2953897245.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    Hi! I'm Ryan Nguyen. I'm a Junior here at Del Norte. My favorite candy is Skittles, evidenced by my topic of choice for this mini-project. I love programming, anything STEM-related, and reading. I am an introvert, and thus I thrive off individual time and spending time alone. This isn't to say that I don't like social interaction! I love talking to people who can keep the coversation going and match my energy or interests. I'm excited to be here in AP CSP, and I hope to learn a lot in this class.\u001b[0m\n\u001b[0m                                                                                                                                                                                                                                                                                                                                                                                                                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 3)\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "(About Page): \n",
     "\n",
@@ -100,8 +117,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
