--- a/_notebooks/Foundation/B-tools_and_equipment/2023-08-22-devops_tools-verify.ipynb
+++ b/_notebooks/Foundation/B-tools_and_equipment/2023-08-22-devops_tools-verify.ipynb
@@ -22,6 +22,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from emoji import emojize\n",
+    "print(emojize(\":thumbs_up: Python is awesome! :grinning_face:\"))\n",
+    "print(\"I hope this works!\")"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
