--- a/Student_teaches/Lesson_3.1/2024-10-07-lesson-3-1.ipynb
+++ b/Student_teaches/Lesson_3.1/2024-10-07-lesson-3-1.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {
     "vscode": {
      "languageId": "raw"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 30,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -259,7 +259,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "\nconst sentence = \"The quick brown fox jumps over the lazy dog\";\n\n// Extract the word \"quick\"\nconst quick = sentence.slice(4, 9); // Starting at index 4 and ending before index 9, using the .slice method.\n\n// Extract the word \"lazy\" using a negative starting index\nconst lazy = sentence.slice(-8, -4); // Starting at -8 and ending before -4 (goes in reverse index).\n\n// Extract everything from the word \"fox\" to the end of the sentence\nconst fromFoxToEnd = sentence.slice(16); // This takes an element corresponding to index 16, and extracts everything that comes after. \n\n\nconsole.log(\"Extracted word 'quick':\", quick);\nconsole.log(\"Extracted word 'lazy':\", lazy);\nconsole.log(\"Extracted from 'fox' to end:\", fromFoxToEnd); // These will print out the extractions using console.log.\n",
+      "application/javascript": "\n(function() {\n    const sentence = \"The quick brown fox jumps over the lazy dog\";\n\n    // Extract the word \"quick\"\n    const quick = sentence.slice(4, 9); // Starting at index 4 and ending before index 9, using the .slice method.\n\n    // Extract the word \"lazy\" using a negative starting index\n    const lazy = sentence.slice(-8, -4); // Starting at -8 and ending before -4 (goes in reverse index).\n\n    // Extract everything from the word \"fox\" to the end of the sentence\n    const fromFoxToEnd = sentence.slice(16); // This takes an element corresponding to index 16, and extracts everything that comes after. \n\n    console.log(\"Extracted word 'quick':\", quick);\n    console.log(\"Extracted word 'lazy':\", lazy);\n    console.log(\"Extracted from 'fox' to end:\", fromFoxToEnd); // These will print out the extractions using console.log.\n\n    return {\n        quick: quick,\n        lazy: lazy,\n        fromFoxToEnd: fromFoxToEnd\n    };\n})();\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 33,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -334,7 +334,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "\nconst africanCountries = \"Algeria, Angola, Benin, Botswana, Burkina Faso, Burundi, Cabo Verde, Cameroon, Central African Republic, Chad, Comoros, Congo (Congo-Brazzaville), Cote d’Ivoire, Djibouti, DR Congo (Congo-Kinshasa), Egypt, Equatorial Guinea, Eritrea, Eswatini, Ethiopia, Gabon, Gambia, Ghana, Guinea, Guinea-Bissau, Kenya, Lesotho, Liberia, Libya, Madagascar, Malawi, Mali, Mauritania, Mauritius, Morocco, Mozambique, Namibia, Niger, Nigeria, Rwanda, Sao Tome and Principe, Senegal, Seychelles, Sierra Leone, Somalia, South Africa, South Sudan, Sudan, Tanzania, Togo, Tunisia, Uganda, Zambia, Zimbabwe\";\n\n// Convert string to array\nconst countriesArray = africanCountries.split(\", \");\n\n// Output the array\nconsole.log(countriesArray);\n",
+      "application/javascript": "\nconst africanCountries = \"Algeria, Angola, Benin, Botswana, Burkina Faso, Burundi, Cabo Verde, Cameroon, Central African Republic, Chad, Comoros, Congo (Congo-Brazzaville), Cote d’Ivoire, Djibouti, DR Congo (Congo-Kinshasa), Egypt, Equatorial Guinea, Eritrea, Eswatini, Ethiopia, Gabon, Gambia, Ghana, Guinea, Guinea-Bissau, Kenya, Lesotho, Liberia, Libya, Madagascar, Malawi, Mali, Mauritania, Mauritius, Morocco, Mozambique, Namibia, Niger, Nigeria, Rwanda, Sao Tome and Principe, Senegal, Seychelles, Sierra Leone, Somalia, South Africa, South Sudan, Sudan, Tanzania, Togo, Tunisia, Uganda, Zambia, Zimbabwe\";\n\n// This converts the string to an array using a .split method (a string method). This breaks up the string any time there is an element that has a comma followed by a space.\nconst countriesArray = africanCountries.split(\", \");\n\n// Output the array\nconsole.log(countriesArray);\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
