--- a/Student_teaches/Lesson 3.3_5/2024-10-09-lesson3-35.ipynb
+++ b/Student_teaches/Lesson 3.3_5/2024-10-09-lesson3-35.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -148,7 +148,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "\nfunction goOutside(temperature, isRaining) { // Defining the function and outlining parameters, just this time in JS.\n    if (temperature < 100 && isRaining) {\n        return true;\n    } else if (temperature > 32 && !isRaining) {\n        return true;\n    } else if (temperature > 100 && isRaining) {\n        return false;\n    } else {\n        return false;\n    }\n}\n\nconsole.log(goOutside(90, true));   // Output: true\nconsole.log(goOutside(50, false));  // Output: true\nconsole.log(goOutside(30, false));  // Output: false\nconsole.log(goOutside(110, true));  // Output: false\n",
+      "application/javascript": "\nfunction goOutside(temperature, isRaining) { // Defining the function and outlining parameters, just this time in JS.\n    if (temperature < 100 && isRaining) { // Making sure to use the AND logical operator, &&. \n        return true;\n    } else if (temperature > 32 && !isRaining) {\n        return true;\n    } else if (temperature > 100 && isRaining) {\n        return false;\n    } else {\n        return false;\n    }\n}\n\nconsole.log(goOutside(90, true));   // Output: true\nconsole.log(goOutside(50, false));  // Output: true\nconsole.log(goOutside(30, false));  // Output: false\nconsole.log(goOutside(110, true));  // Output: false\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -180,13 +180,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "\nlet stayInside = !isRaining || !isCold; // Updated expression for 1, using OR operator.\n\nlet stayInside = !isRaining && !isCold; // Updated expression for 2, using AND operator.\n\n\n\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%javascript // This is hack #2, simplifying expressions.\n",
     "\n",
