--- a/Student_teaches/Lesson 3.8/2024-10-10-lesson-3-8.ipynb
+++ b/Student_teaches/Lesson 3.8/2024-10-10-lesson-3-8.ipynb
@@ -28,7 +28,7 @@
    },
    "source": [
     "<div style=\"border: 2px solid #336e9c; padding: 10px; border-radius: 5px; text-align: center;\">\n",
-    "    <h2>🍿 Popcorn Hacks for Lesson 3.8</h2>\n",
+    "    <h2>Hacks for Lesson 3.8</h2>\n",
     "</div>\n"
    ]
   },
