--- a/_posts/Foundation/2024-10-15-sprint-2-final.ipynb
+++ b/_posts/Foundation/2024-10-15-sprint-2-final.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "source": [
+    "---\n",
+    "layout: post\n",
+    "title: Sprint 2 Final and Blog\n",
+    "description: Collection of my journey through Sprint 2 and the Finals Hack!\n",
+    "type: issues\n",
+    "comments: True\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -72,12 +89,12 @@
     "        Mort's Link\n",
     "    </a>\n",
     "</body>\n",
-    "</html>\n"
+    "</html>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "html"
