--- a/_posts/Foundation/2024-10-15-3-10.md
+++ b/_posts/Foundation/2024-10-15-3-10.md
@@ -35,5 +35,13 @@ comments: True
     <p>- Communication: Reaching out to groups on Slack, personal DMs, #announcements, or #coding to release period spreadsheets, forms, or schedule</p>
     <p>- Jupyter Notebooks: Learning how to compile all lessons into one place, better understanding permalinks</p>
     <p>- Collaboration: Understanding to sync my repo BEFORE making changes/committing, pull before push, working with groups to get submissions in on time (for lessons and before)</p>
-</div>
 
+    <hr /> <!-- This creates a horizontal line -->
+
+    <h1>Lesson 3.10</h1>
+    <a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-1">3.10.1 Home Page/Python Lists</a><br />
+    <a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-2">Lesson 3.10.2 JS Arrays</a><br />
+    <a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-3">Python Hacks</a><br />
+    <a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-4">Javascript Hacks</a><br />
+    <a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-5">Javascript Hacks</a>
+</div>
