adding info about 3.10

--- a/_posts/Foundation/2024-10-15-3-10.md
+++ b/_posts/Foundation/2024-10-15-3-10.md
@@ -8,7 +8,11 @@ comments: True
 
 <div>
     <style>
+        p {
+            margin-bottom: 20px; /* Adds space below each paragraph */
+        }
     </style>
+
     <h1>Accomplishments Checklist for CB (College-Board) and PBL Preparation:</h1>
     <ul>
         <li><input type="checkbox" id="python_variables" /> <label for="python_variables">Understanding of Python Variables</label></li>
@@ -19,6 +23,7 @@ comments: True
         <li><input type="checkbox" id="js_arrays" /> <label for="js_arrays">Skill in manipulating JS arrays</label></li>
         <li><input type="checkbox" id="iteration" /> <label for="iteration">Experience using iteration to cycle through lists/arrays</label></li>
     </ul>
+
     <p>Now that I am familiar with these concepts, I can take these a step further!</p>
 
     <h1>Memory (Interesting Things From 3.10 Lists):</h1>
@@ -39,9 +44,21 @@ comments: True
     <hr /> <!-- This creates a horizontal line -->
 
     <h1>Lesson 3.10</h1>
-    <a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-1">3.10.1 Home Page/Python Lists</a><br />
-    <a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-2">Lesson 3.10.2 JS Arrays</a><br />
-    <a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-3">Python Hacks</a><br />
-    <a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-4">Javascript Hacks</a><br />
-    <a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-5">Javascript Hacks</a>
+    <h2>Submenu:</h2>
+    <ul>
+        <li><a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-1">3.10.1 Home Page/Python Lists</a></li>
+        <li><a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-2">3.10.2 JS Arrays</a></li>
+        <li><a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-3">3.10.3 Python Hacks</a></li>
+        <li><a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-4">3.10.4 JavaScript Hacks</a></li>
+        <li><a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-5">3.10.5 Homework</a></li>
+    </ul>
+
+    <h1>Lesson Summaries and Links</h1>
+    <p>In lesson 3.10.1, we discussed Python list fundamentals (a key College Board concept). This included things such as indexing, accessing, modifying, iterating, etc through lists. In other words, this lesson focused heavily on how we USE Python lists. For our <strong>popcorn hack</strong>, we simply had our students manipulate a basic list. This included adding items, "popping" an item, or modifying an item of a particular index.</p>
+
+    <p>In lesson 3.10.2, we continued this flow. To meet the JavaScript requirement, we focused on the JavaScript counterpart to Python lists: arrays. We covered the same concepts as 3.10.1, this time providing the information in relation to JavaScript. We made sure to add some caveats to distinguish between Python and JavaScript. Our <strong>popcorn hack</strong> for this section was simple. We simply had our students reverse the order of an array without creating a new one. We wanted to keep this short and sweet.</p>
+
+    <p>In lesson 3.10.3/3.10.4, we summed up everything we covered and turned them into homework hacks. Our Python hacks included some more basic things, like creating a function that could find the minimum and maximum integer. Others, like the JavaScript hack, required a "shopping cart" which would fill with items. The user could then interact with this cart to add, take out, or view their items. <strong>I noticed that some people used emojis to represent their items!</strong></p>
+
+    <p>We wrapped up our lesson with 3.10.5, our grading and submission. We briefly explained our grading rubric, available on the actual lesson, period spreadsheet, and the actual issue in my repo. I helped groups compile their lessons onto our period spreadsheet <a href="https://docs.google.com/spreadsheets/d/1eHGWIXPmFyhhdkjCYhULZZxweWrCLLZLY0NlReUTi7c/edit?gid=0#gid=0">here</a>. Here are the grades for my lesson, 3.10: <a href="https://docs.google.com/spreadsheets/d/1a1gVjMEjLDGlVRedr-MDaDk8EmUDFdqfIUeOOetPlC0/edit?gid=798569963#gid=798569963">here</a>.</p>
 </div>
