adding image for accomp.

--- a/_posts/Foundation/2024-10-15-3-10.md
+++ b/_posts/Foundation/2024-10-15-3-10.md
@@ -11,8 +11,14 @@ comments: True
         p {
             margin-bottom: 20px; /* Adds space below each paragraph */
         }
+        .center-image {
+            display: block;          /* Make the image a block element */
+            margin-left: auto;      /* Center the image */
+            margin-right: auto;     /* Center the image */
+            width: 50%;             /* Adjust width to make the image smaller */
+            height: auto;           /* Keep the aspect ratio */
+        }
     </style>
-
     <h1>Accomplishments Checklist for CB (College-Board) and PBL Preparation:</h1>
     <ul>
         <li><input type="checkbox" id="python_variables" /> <label for="python_variables">Understanding of Python Variables</label></li>
@@ -23,26 +29,21 @@ comments: True
         <li><input type="checkbox" id="js_arrays" /> <label for="js_arrays">Skill in manipulating JS arrays</label></li>
         <li><input type="checkbox" id="iteration" /> <label for="iteration">Experience using iteration to cycle through lists/arrays</label></li>
     </ul>
-
     <p>Now that I am familiar with these concepts, I can take these a step further!</p>
-
     <h1>Memory (Interesting Things From 3.10 Lists):</h1>
     <p>- Shopping Cart JavaScript Hack ("Let's Go Shopping!")</p>
     <p>- Use of List Comprehensions as an alternate method to the modulus method.</p>
-
+    <img src="images/Screenshot_2024-10-16_080338.png" alt="Screenshot Description" class="center-image">
     <h1>Relevancy (Notable Group Achievements):</h1>
     <p>- Truth Table by Lesson 3.5.2</p>
     <p>- Nested Conditionals by Lesson 3.7</p>
-
     <h1>Beyond Perfunctory:</h1>
     <p>- Lesson used colored borders (Indicate to graders who covered a particular portion)</p>
     <p>- Familiarizing myself with <strong>Pull Requests</strong> // Trouble-shooting conflict merges, testing on local host, helping other groups with conflict merges</p>
     <p>- Communication: Reaching out to groups on Slack, personal DMs, #announcements, or #coding to release period spreadsheets, forms, or schedule</p>
     <p>- Jupyter Notebooks: Learning how to compile all lessons into one place, better understanding permalinks</p>
     <p>- Collaboration: Understanding to sync my repo BEFORE making changes/committing, pull before push, working with groups to get submissions in on time (for lessons and before)</p>
-
     <hr /> <!-- This creates a horizontal line -->
-
     <h1>Lesson 3.10</h1>
     <h2>Submenu:</h2>
     <ul>
@@ -52,13 +53,9 @@ comments: True
         <li><a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-4">3.10.4 JavaScript Hacks</a></li>
         <li><a href="https://nighthawkcoders.github.io/portfolio_2025/csp/big-idea/p3/3-10-5">3.10.5 Homework</a></li>
     </ul>
-
     <h1>Lesson Summaries and Links</h1>
     <p>In lesson 3.10.1, we discussed Python list fundamentals (a key College Board concept). This included things such as indexing, accessing, modifying, iterating, etc through lists. In other words, this lesson focused heavily on how we USE Python lists. For our <strong>popcorn hack</strong>, we simply had our students manipulate a basic list. This included adding items, "popping" an item, or modifying an item of a particular index.</p>
-
     <p>In lesson 3.10.2, we continued this flow. To meet the JavaScript requirement, we focused on the JavaScript counterpart to Python lists: arrays. We covered the same concepts as 3.10.1, this time providing the information in relation to JavaScript. We made sure to add some caveats to distinguish between Python and JavaScript. Our <strong>popcorn hack</strong> for this section was simple. We simply had our students reverse the order of an array without creating a new one. We wanted to keep this short and sweet.</p>
-
     <p>In lesson 3.10.3/3.10.4, we summed up everything we covered and turned them into homework hacks. Our Python hacks included some more basic things, like creating a function that could find the minimum and maximum integer. Others, like the JavaScript hack, required a "shopping cart" which would fill with items. The user could then interact with this cart to add, take out, or view their items. <strong>I noticed that some people used emojis to represent their items!</strong></p>
-
     <p>We wrapped up our lesson with 3.10.5, our grading and submission. We briefly explained our grading rubric, available on the actual lesson, period spreadsheet, and the actual issue in my repo. I helped groups compile their lessons onto our period spreadsheet <a href="https://docs.google.com/spreadsheets/d/1eHGWIXPmFyhhdkjCYhULZZxweWrCLLZLY0NlReUTi7c/edit?gid=0#gid=0">here</a>. Here are the grades for my lesson, 3.10: <a href="https://docs.google.com/spreadsheets/d/1a1gVjMEjLDGlVRedr-MDaDk8EmUDFdqfIUeOOetPlC0/edit?gid=798569963#gid=798569963">here</a>.</p>
 </div>
