--- a/_posts/Foundation/2024-10-15-3-10.md
+++ b/_posts/Foundation/2024-10-15-3-10.md
@@ -33,7 +33,7 @@ comments: True
     <h1>Memory (Interesting Things From 3.10 Lists):</h1>
     <p>- Shopping Cart JavaScript Hack ("Let's Go Shopping!")</p>
     <p>- Use of List Comprehensions as an alternate method to the modulus method.</p>
-    <img src="images/Screenshot_2024-10-16_080338.png" alt="Screenshot Description" class="center-image">
+    <img src="Screenshot 2024-10-16 080338.png" alt="List Comprehensions from the Lesson" class="center-image">
     <h1>Relevancy (Notable Group Achievements):</h1>
     <p>- Truth Table by Lesson 3.5.2</p>
     <p>- Nested Conditionals by Lesson 3.7</p>
