--- a/_posts/Foundation/2024-10-15-3-10.md
+++ b/_posts/Foundation/2024-10-15-3-10.md
@@ -33,7 +33,13 @@ comments: True
     <h1>Memory (Interesting Things From 3.10 Lists):</h1>
     <p>- Shopping Cart JavaScript Hack ("Let's Go Shopping!")</p>
     <p>- Use of List Comprehensions as an alternate method to the modulus method.</p>
-   <img src="lesson.png" alt="List Comprehensions" class="center-image">
+    <p>
+        For example, if we have a list of numbers: <code>numbers = [1, 2, 3, 4, 5, 6]</code>, 
+        we can create a list of even numbers using a list comprehension: 
+        <code>even_numbers = [num for num in numbers if num % 2 == 0]</code>. 
+        This would output <code>[2, 4, 6]</code>, thanks to the list comprehension! 
+        List comprehensions allow you to write shorter code that is easier to read, potentially saving time!
+    </p>
     <h1>Relevancy (Notable Group Achievements):</h1>
     <p>- Truth Table by Lesson 3.5.2</p>
     <p>- Nested Conditionals by Lesson 3.7</p>
